--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.3"
   }
 }
