--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.10",
+    "nodemon": "^3.1.0",
     "prettier": "^1.16.4"
   },
   "dependencies": {
@@ -22,6 +22,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "mongoose": "^8.1.3"
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.1.3",
+    "set-value": "^4.1.0"
   }
 }
