--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "nodemon server/server.js",
     "build": "babel server -d dist"
-
   },
   "license": "MIT",
   "babel": {
@@ -18,6 +17,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@types/jest": "^29.5.12",
