--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server/server.js",
-    "build": "babel server -d dist"
+    "build": "babel server -d dist",
+    "build-dev": "webpack --config webpack.dev.js --mode development"
   },
   "license": "MIT",
   "babel": {
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.24.0",
     "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -31,7 +33,9 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "^1.16.4",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
