--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^7.1.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.13",
     "set-value": "^4.1.0"
   }
 }
