--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "piweb-backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon server/server.js"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.10",
-    "prettier": "^1.16.4"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "mongoose": "^8.1.3"
-  }
+    "name": "pi-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "back": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/salehladgham/PI-Backend.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/salehladgham/PI-Backend/issues"
+    },
+    "homepage": "https://github.com/salehladgham/PI-Backend#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.3",
+        "express-router": "^0.0.1",
+        "faker": "^6.6.6",
+        "fs": "^0.0.1-security",
+        "json-schema-faker": "^0.5.6",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^8.2.0",
+        "nodemon": "^3.1.0"
+    }
 }
