--- a/package.json
+++ b/package.json
@@ -38,14 +38,20 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "helmet": "^7.1.0",
+    "joi": "^17.13.0",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "node": "^21.7.1",
+    "nodemailer": "^6.9.13",
     "socket.io": "^4.7.4"
   }
 }
